[gd_scene load_steps=17 format=3 uid="uid://bedrieib543ak"]

[ext_resource type="Script" path="res://src/objects/pull/pull_main.gd" id="1_olxdt"]
[ext_resource type="Script" path="res://src/objects/pull/catch_area.gd" id="2_rd4bb"]
[ext_resource type="Texture2D" uid="uid://bh0imrpwbqv1u" path="res://assets/sprites/progressbars/bar.png" id="3_08pye"]
[ext_resource type="Texture2D" uid="uid://461o6cj0p7ok" path="res://assets/sprites/progressbars/Fishing rod.png" id="4_dockv"]
[ext_resource type="Script" path="res://src/objects/pull/fish_area.gd" id="4_egmtj"]
[ext_resource type="Texture2D" uid="uid://ujwj4acyjl2m" path="res://assets/sprites/Fish.png" id="5_vequx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rb8b0"]
radius = 65.0057

[sub_resource type="CircleShape2D" id="CircleShape2D_s4wps"]
radius = 17.0872

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qalrx"]
bg_color = Color(0.352941, 0.0784314, 0.054902, 0.141176)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kj4fn"]
bg_color = Color(0.585241, 0.140445, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eq8sn"]
bg_color = Color(0.164706, 0.2, 0.176471, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2xpkd"]
bg_color = Color(0, 0.427451, 0.180392, 1)

[sub_resource type="Animation" id="Animation_ixrw5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1400, 360)]
}

[sub_resource type="Animation" id="Animation_o545k"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1400, 360), Vector2(1120, 360)]
}

[sub_resource type="Animation" id="Animation_ikg2x"]
resource_name = "disappear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1120, 360), Vector2(1400, 360)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8tu3l"]
_data = {
"RESET": SubResource("Animation_ixrw5"),
"appear": SubResource("Animation_o545k"),
"disappear": SubResource("Animation_ikg2x")
}

[node name="Pull" type="Control"]
z_index = 20
layout_mode = 3
anchors_preset = 0
offset_left = 1400.0
offset_top = 360.0
offset_right = 1400.0
offset_bottom = 360.0
size_flags_vertical = 3
script = ExtResource("1_olxdt")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(6.48499e-05, 0.500305)
scale = Vector2(3.9, 2.10545)
texture = ExtResource("3_08pye")

[node name="CatchArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
monitorable = false
script = ExtResource("2_rd4bb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatchArea"]
shape = SubResource("CircleShape2D_rb8b0")

[node name="Sprite2D2" type="Sprite2D" parent="CatchArea"]
scale = Vector2(3.9375, 3.9375)
texture = ExtResource("4_dockv")

[node name="FishArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_mask = 0
monitoring = false
script = ExtResource("4_egmtj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FishArea"]
shape = SubResource("CircleShape2D_s4wps")

[node name="Sprite2D2" type="Sprite2D" parent="FishArea"]
scale = Vector2(4.92647, 4.92647)
texture = ExtResource("5_vequx")

[node name="TimeBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = -101.0
offset_top = -272.0
offset_right = -86.0
offset_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_qalrx")
theme_override_styles/fill = SubResource("StyleBoxFlat_kj4fn")
max_value = 1.0
step = 0.001
value = 0.5
fill_mode = 3
show_percentage = false

[node name="GameTimer" type="Timer" parent="TimeBar"]
unique_name_in_owner = true
one_shot = true

[node name="SuccessBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 86.0
offset_top = -274.0
offset_right = 102.0
offset_bottom = 274.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_eq8sn")
theme_override_styles/fill = SubResource("StyleBoxFlat_2xpkd")
max_value = 15.0
step = 0.001
value = 7.5
fill_mode = 3
show_percentage = false

[node name="AnimationTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8tu3l")
}
autoplay = "RESET"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="TimeBar/GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="value_changed" from="SuccessBar" to="." method="_on_success_bar_value_changed"]
